--- a/Events/Main_iPhone.storyboard
+++ b/Events/Main_iPhone.storyboard
@@ -299,7 +299,7 @@
                                 <rect key="frame" x="0.0" y="28" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Lel-J1-g6z" id="iZS-I6-pmo">
-                                    <rect key="frame" x="0.0" y="0.0" width="286" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="287" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                                 <connections>
@@ -933,15 +933,15 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="97" sectionHeaderHeight="28" sectionFooterHeight="28" id="TZI-2F-yAy">
-                                <rect key="frame" x="0.0" y="328" width="320" height="575"/>
+                                <rect key="frame" x="0.0" y="285" width="320" height="618"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="EventCalCell" rowHeight="97" id="wmc-XB-UsH" customClass="EventCalCell">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="EventCalCell" rowHeight="97" id="wmc-XB-UsH" customClass="EventCalCell">
                                         <rect key="frame" x="0.0" y="28" width="320" height="97"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="wmc-XB-UsH" id="1zc-xa-KoJ">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="96.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="287" height="96.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="no_image.png" id="V9S-Of-8Hr">
@@ -976,6 +976,7 @@
                                             <outlet property="lblDateTime" destination="9ZR-2v-zbc" id="AiS-IS-EOl"/>
                                             <outlet property="lblEventName" destination="aFV-qf-nWi" id="KZg-hx-k9V"/>
                                             <outlet property="lblEventPlace" destination="QrU-fc-EdP" id="gGF-6s-Hee"/>
+                                            <segue destination="GJ5-Ez-Ag6" kind="push" identifier="event_cal" id="Foe-Gp-loj"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -2082,13 +2083,14 @@
         <simulatedScreenMetrics key="destination" type="retina4_7.fullscreen"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="Yzg-yO-FJ6"/>
-        <segue reference="ZrE-a6-aH7"/>
         <segue reference="bDj-6L-rqu"/>
+        <segue reference="ZrE-a6-aH7"/>
+        <segue reference="Yzg-yO-FJ6"/>
         <segue reference="CLK-cx-blz"/>
         <segue reference="4M8-vo-jHA"/>
-        <segue reference="Cdl-T2-4OV"/>
         <segue reference="4ze-bK-Lvy"/>
         <segue reference="lUk-1e-ZYk"/>
+        <segue reference="Cdl-T2-4OV"/>
+        <segue reference="Foe-Gp-loj"/>
     </inferredMetricsTieBreakers>
 </document>
