--- a/Events/Main_iPhone.storyboard
+++ b/Events/Main_iPhone.storyboard
@@ -992,6 +992,7 @@
                                         </state>
                                         <connections>
                                             <action selector="clickedMyCalender:" destination="q9C-wm-4ug" eventType="touchUpInside" id="dST-RL-o4F"/>
+                                            <segue destination="ymv-lc-u6U" kind="push" animates="NO" id="Caw-4u-Ufj"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="lAD-to-a8x">
@@ -1839,6 +1840,7 @@
                                         </state>
                                         <connections>
                                             <action selector="clickedMyCalender:" destination="uN1-jK-Wuq" eventType="touchUpInside" id="g27-GU-tZY"/>
+                                            <segue destination="ymv-lc-u6U" kind="push" animates="NO" id="eg5-sk-kwe"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="6vW-6T-Ud5">
@@ -1892,6 +1894,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" id="g3A-tZ-1m6">
+                                <rect key="frame" x="0.0" y="20" width="320" height="378"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </scrollView>
                             <view contentMode="scaleToFill" id="dWm-CC-0BB">
                                 <rect key="frame" x="0.0" y="63" width="320" height="43"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -1915,6 +1921,9 @@
                                         <state key="normal" title="Attending">
                                             <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
+                                        <connections>
+                                            <segue destination="uN1-jK-Wuq" kind="push" animates="NO" id="6n8-q3-lxy"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="Fec-lO-v4N">
                                         <rect key="frame" x="106" y="8" width="102" height="28"/>
@@ -1923,6 +1932,9 @@
                                         <state key="normal" title="Favorites">
                                             <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
+                                        <connections>
+                                            <segue destination="q9C-wm-4ug" kind="push" animates="NO" id="3TW-bE-gSX"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" red="0.22352941179999999" green="0.23529411759999999" blue="0.23529411759999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -1937,12 +1949,13 @@
                         <outlet property="btnMyCalender" destination="glN-PG-mcU" id="54F-4v-uNF"/>
                         <outlet property="btnMyFavourites" destination="Fec-lO-v4N" id="0xb-NO-ZpM"/>
                         <outlet property="btnMyTickets" destination="i2K-Lp-h1d" id="TnF-bz-hfe"/>
+                        <outlet property="calendarView" destination="g3A-tZ-1m6" id="JxI-65-v9N"/>
                         <outlet property="imgSegmentBar" destination="MNk-uV-Mlh" id="NCn-nW-K2b"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="h41-Zr-CbZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="94" y="-2240"/>
+            <point key="canvasLocation" x="94" y="-2240.5"/>
         </scene>
     </scenes>
     <resources>
@@ -1990,5 +2003,8 @@
         <segue reference="CLK-cx-blz"/>
         <segue reference="4M8-vo-jHA"/>
         <segue reference="bDj-6L-rqu"/>
+        <segue reference="6n8-q3-lxy"/>
+        <segue reference="eg5-sk-kwe"/>
+        <segue reference="3TW-bE-gSX"/>
     </inferredMetricsTieBreakers>
 </document>
